[package]
name = "border"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license = "GPL-2.0-or-later"
readme = "README.md"

[dependencies]
aquamarine = { workspace = true }
tch = { workspace = true, optional = true }
candle-core = { workspace = true, optional = true }
candle-nn = { workspace = true, optional = true }
border-async-trainer = { version = "0.0.8", path = "../border-async-trainer", optional = true }
anyhow = { workspace = true }
log = { workspace = true }
dirs = { workspace = true }
zip = "0.5.12"
reqwest = { workspace = true }
border-core = { version = "0.0.8", path = "../border-core" }

[[example]]
name = "dqn_cartpole"
path = "examples/gym/dqn_cartpole.rs"
required-features = ["candle-core"]
test = false

[[example]]
name = "dqn_cartpole_tch"
path = "examples/gym/dqn_cartpole_tch.rs"
required-features = ["tch"]
test = true

[[example]]
name = "iqn_cartpole_tch"
path = "examples/gym/iqn_cartpole_tch.rs"
required-features = ["tch"]
test = true

[[example]]
name = "sac_pendulum_tch"
path = "examples/gym/sac_pendulum_tch.rs"
required-features = ["tch"]
test = true

[[example]]
name = "sac_pendulum"
path = "examples/gym/sac_pendulum.rs"
required-features = ["candle-core"]
test = true

[[example]]
name = "sac_lunarlander_cont"
path = "examples/gym/sac_lunarlander_cont.rs"
required-features = ["candle-core"]
test = false

[[example]]
name = "sac_lunarlander_cont_tch"
path = "examples/gym/sac_lunarlander_cont_tch.rs"
required-features = ["tch"]
test = false

# [[example]]
# name = "random_atari"
# required-features = ["tch"]
# test = false

[[example]]
name = "dqn_atari"
path = "examples/atari/dqn_atari.rs"
required-features = ["candle-core"]
test = false

[[example]]
name = "dqn_atari_tch"
path = "examples/atari/dqn_atari_tch.rs"
required-features = ["tch"]
test = false

[[example]]
name = "dqn_atari_async_tch"
path = "examples/atari/dqn_atari_async_tch.rs"
required-features = ["tch", "border-async-trainer"]
test = false

[[example]]
name = "sac_fetch_reach"
path = "examples/gym-robotics/sac_fetch_reach.rs"
required-features = ["tch"]
test = false

# [[example]]
# name = "iqn_atari_rs"
# required-features = ["tch"]
# test = false

[[example]]
name = "sac_mujoco"
path = "examples/mujoco/sac_mujoco.rs"
required-features = ["candle-core"]
test = false

[[example]]
name = "sac_mujoco_tch"
path = "examples/mujoco/sac_mujoco_tch.rs"
required-features = ["tch"]
test = false

[[example]]
name = "sac_mujoco_async_tch"
path = "examples/mujoco/sac_mujoco_async_tch.rs"
required-features = ["tch", "border-async-trainer"]
test = false

[[example]]
name = "convert_sac_policy_to_edge"
path = "examples/gym/convert_sac_policy_to_edge.rs"
required-features = ["border-tch-agent", "tch"]
test = false

[[example]]
name = "pendulum_edge"
path = "examples/gym/pendulum_edge.rs"
test = false

# [[example]]
# name = "sac_ant_async"
# path = "examples/mujoco/sac_ant_async.rs"
# required-features = ["tch", "border-async-trainer"]
# test = false

# [[example]]
# name = "make_cfg_dqn_atari"
# required-features = ["border-async-trainer"]
# test = false

# [[example]]
# name = "make_cfg_iqn_atari"
# required-features = ["border-async-trainer"]
# test = false

[[example]]
name = "bc_kitchen"
path = "examples/d4rl/bc_kitchen.rs"
required-features = ["candle"]
test = false

[[example]]
name = "bc_maze2d"
path = "examples/d4rl/bc_maze2d.rs"
required-features = ["candle"]
test = false

[[example]]
name = "awac_maze2d"
path = "examples/d4rl/awac_maze2d.rs"
required-features = ["candle"]
test = false

[dev-dependencies]
clap = { workspace = true }
csv = { workspace = true }
tempdir = { workspace = true }
border-derive = { version = "0.0.8", path = "../border-derive" }
border-core = { version = "0.0.8", path = "../border-core" }
border-tensorboard = { version = "0.0.8", path = "../border-tensorboard" }
border-tch-agent = { version = "0.0.8", path = "../border-tch-agent" }
border-policy-no-backend = { version = "0.0.8", path = "../border-policy-no-backend" }
border-py-gym-env = { version = "0.0.8", path = "../border-py-gym-env" }
border-atari-env = { version = "0.0.8", path = "../border-atari-env" }
border-candle-agent = { version = "0.0.8", path = "../border-candle-agent" }
border-mlflow-tracking = { version = "0.0.8", path = "../border-mlflow-tracking" }
border-minari = { version = "0.0.8", path = "../border-minari" }
serde = { workspace = true, features = ["derive"] }
crossbeam-channel = { workspace = true }
env_logger = { workspace = true }
numpy = { workspace = true }
ndarray = { workspace = true, features = ["serde"] }
num-traits = { workspace = true }
pyo3 = { workspace = true, default-features = false }
fastrand = { workspace = true }
chrono = { workspace = true }
tensorboard-rs = { workspace = true }
thiserror = { workspace = true }
serde_yaml = { workspace = true }
bincode = { workspace = true }

[package.metadata.docs.rs]
features = ["doc-only"]

[features]
doc-only = ["tch/doc-only"]
cuda = ["candle-core/cuda"]
cudnn = ["candle-core/cudnn"]
border-tch-agent = []
candle = ["border-minari/candle", "candle-core", "candle-nn"]
