[package]
name = "dqn_atari"
version = "0.1.0"
edition = "2018"
rust-version = "1.84"

[dependencies]
log = "0.4"
anyhow = "1.0.38"
clap = { version = "4.5.8", features = ["derive"] }
env_logger = "0.8.2"
numpy = "0.14.1"
candle-core = { version = "0.8.4", feature = ["cuda", "cudnn"] }
border-candle-agent = { version = "0.0.8", path = "../../../border-candle-agent" }
border-core = { version = "0.0.8", path = "../../../border-core" }
border-tensorboard = { version = "0.0.8", path = "../../../border-tensorboard" }
border-mlflow-tracking = { version = "0.0.8", path = "../../../border-mlflow-tracking" }
border-atari-env = { version = "0.0.8", path = "../../../border-atari-env", features = ["candle"]}
serde = "1.0.194"
serde_yaml = "0.8.7"

[features]
cuda = ["candle-core/cuda", "candle-core/cudnn"]

[dev-dependencies]
tempdir = "0.3.7"
